--- a/templates/base.html
+++ b/templates/base.html
@@ -30,9 +30,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">首页<span class="sr-only">(current)</span></a></li>
-        <li><a href="{{ url_for('question') }}">发布问答</a></li>
+        <li><a href="{{ url_for('question.question') }}">发布问答</a></li>
       </ul>
-      <form class="navbar-form navbar-left" action="{{ url_for('search') }}" method="post">
+      <form class="navbar-form navbar-left" action="{{ url_for('question.search') }}" method="post">
         <div class="form-group">
           <input type="text" name="search_key" class="form-control" placeholder="请输入关键字">
         </div>
@@ -40,11 +40,11 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
           {% if user%}
-              <li><a href="#">{{ user.username }}</a></li>
-              <li><a href="{{ url_for('logout') }}">注销</a></li>
+              <li><a href="#">{{ user[0].UserName }}</a></li>
+              <li><a href="{{ url_for('login.logout') }}">注销</a></li>
           {% else %}
-              <li><a href="{{ url_for('login') }}">登录</a></li>
-              <li><a href="{{ url_for('regist') }}">注册</a></li>
+              <li><a href="{{ url_for('login.login') }}">登录</a></li>
+              <li><a href="{{ url_for('login.regist') }}">注册</a></li>
           {% endif %}
 
       </ul>
