--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
                 <img src="{{ url_for('static',filename='images/1110055.png') }}" alt="" class="avatar">
             </div>
             <div class="question-group">
-                <p class="question-title"><a href="{{ url_for('detail', question_id=question.id) }}">{{ question.QuestionTitle }}</a></p>
+                <p class="question-title"><a href="{{ url_for('answer.detail', question_id=question.id) }}">{{ question.QuestionTitle }}</a></p>
                 <p class="question-content">{{ question.QuestionContent }}</p>
             <div class="question-info">
                 <span class="question-author">{{ question.UserName }}</span>
