--- a/templates/regist.html
+++ b/templates/regist.html
@@ -25,7 +25,7 @@
             <div class="form-group">
                 <input type="password" class="form-control" placeholder="确认密码" name="password2" id="password2"
                        onblur="Password2Check()">
-                <label id="password2_error" style="display:block;color: red">{{ error_email }}</label>
+                <label id="password2_error" style="display:block;color: red">{{ error_password }}</label>
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary btn-block">立即注册</button>
