--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
       </ul>
       <form class="navbar-form navbar-left" action="{{ url_for('question.search') }}" method="post">
         <div class="form-group">
-          <input type="text" name="search_key" class="form-control" placeholder="请输入关键字" value="{{ search_content }}">
+          <input type="text" name="search_key" class="form-control" placeholder="请输入关键字" value="{{ search_key }}">
         </div>
         <button type="submit" class="btn btn-default">查找</button>
       </form>
