--- a/templates/detail.html
+++ b/templates/detail.html
@@ -13,9 +13,9 @@
     <p class="question-content">{{ question.QuestionContent }}</p>
     <hr/>
     <h4>评论：（{{ answer_count}}）</h4>
-    <form action="{{ url_for('answer.add_answer') }}" method="post">
+    <form action="{{ url_for('answer.add_answer') }}" method="post" onsubmit="return checksubmit()">
         <div class="form-group">
-            <input type="text" name="answer_content" class="form-control" placeholder="请填写评论">
+            <input type="text" name="answer_content" id="answer_content" class="form-control" placeholder="请填写评论">
             <input type="hidden" name="question_id" value="{{ question.id }}">
         </div>
         <div  class="form-group" style="text-align: right">
@@ -34,4 +34,16 @@
         </li>
     {% endfor %}
     </ul>
+    <script>
+    function checksubmit() {
+        if ($('#answer_content').val()==""){
+            return false;
+        }
+        else{
+            return true;
+        }
+
+    }
+
+    </script>
 {% endblock %}
