增加未登录不显示评论框 在验证未登录状态跳转显示提示语

--- a/static/css/detail.css
+++ b/static/css/detail.css
@@ -2,6 +2,10 @@
     text-align: center;
     margin-top: 20px;
 }
+.attention-info{
+    text-align: center;
+    margin-top: 20px;
+}
 .answer-list{
     padding-left: 0;
 }
