--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='css/detail.css') }}">
 {% endblock %}
 {% block main %}
-<h3 class="page-title">{{ question.QuestionTitle }}</h3>
+    <h3 class="page-title">{{ question.QuestionTitle }}</h3>
     <p class="question-info">
         <span>作者：{{ question.UserName }}</span>
         <span>时间：{{ question.QuestionTime }}</span>
@@ -13,15 +13,25 @@
     <p class="question-content">{{ question.QuestionContent }}</p>
     <hr/>
     <h4>评论：（{{ answer_count}}）</h4>
-    <form action="{{ url_for('answer.add_answer') }}" method="post" onsubmit="return checksubmit()">
-        <div class="form-group">
-            <input type="text" name="answer_content" id="answer_content" class="form-control" placeholder="请填写评论">
-            <input type="hidden" name="question_id" value="{{ question.id }}">
-        </div>
-        <div  class="form-group" style="text-align: right">
-           <button type="submit" class="btn btn-primary">评论</button>
-        </div>
-    </form>
+
+    {% if user%}
+        <form action="{{ url_for('answer.add_answer') }}" method="post" onsubmit="return checksubmit()">
+            <div class="form-group">
+                <input type="text" name="answer_content" id="answer_content" class="form-control" placeholder="请填写评论">
+                <input type="hidden" name="question_id" value="{{ question.id }}">
+            </div>
+            <div  class="form-group" style="text-align: right">
+               <button type="submit" class="btn btn-primary">评论</button>
+            </div>
+        </form>
+    {% else %}
+        <br/>
+        <p class="attention-info">您当前未登录，如需回答问题。请<a href="{{ url_for('login.login') }}">登录</a>或者<a href="{{ url_for('login.regist') }}">注册</a></p>
+
+    {% endif %}
+
+
+
     <ul class="answer-list">
     {% for answer in answers %}
         <li>
