简单修改，实现搜索无结果提示语

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <ul class="question-list">
         {% if questions|length == 0 %}
             <div class="question-group">
-                <p class="question-content">
+                <p class="attention-info">
                     {% if search_key %}
                         当前关键词无结果
                     {% else %}
