--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,6 +2,11 @@
     list-style: none;
     padding-left: 0;
 }
+.attention-info{
+    text-align: center;
+    margin-top: 20px;
+    font-weight: 900;
+}
 .question-list li{
     border-bottom: 1px solid #eee;
     overflow: hidden;
