修改问题标题为空，内容为空的情况，并增加提示语 增加回答为空的提示语 增加禁言用户，提问、回答检测

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
           {% if user%}
-              <li><a href="#">{{ user[0].UserName }}</a></li>
+              <li><a href="#">{{ user.UserName }}</a></li>
               <li><a href="{{ url_for('login.logout') }}">注销</a></li>
           {% else %}
               <li><a href="{{ url_for('login.login') }}">登录</a></li>
