--- a/templates/question.html
+++ b/templates/question.html
@@ -4,18 +4,38 @@
     <link rel="stylesheet" href="{{ url_for('static',filename='css/question.css') }}">
 {% endblock %}
 {% block main %}
-    <h3 class="page-title">发布问答</h3>
-    <form action="" method="post">
-        <div class="form-container">
-            <div class="form-group">
-                <input type="text" name="title" class="form-control" placeholder="请输入标题">
+    {% if user.UserMute != '1' %}
+        <h3 class="page-title">发布问答</h3>
+        <form action="" method="post" onsubmit="return checksubmit()">
+            <div class="form-container">
+                <div class="form-group">
+                    <input type="text" id="title" name="title" class="form-control" placeholder="请输入标题">
+                </div>
+                <div class="form-group">
+                    <textarea name="content" id="content" class="form-control" rows="5" placeholder="请输入内容"></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">提交</button>
+                </div>
+
+                <div class="form-group">
+                    <label id="label_error"
+                           style="display:block;color: red;text-align: center"></label>
+                </div>
             </div>
-              <div class="form-group">
-               <textarea name="content" class="form-control" rows="5" placeholder="请输入内容"></textarea>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-primary">提交</button>
-            </div>
-        </div>
-    </form>
+        </form>
+    {% else %}
+        <br/>
+        <p class="attention-info">您当前已被禁言，如有问题，请联系管理员</p>
+    {% endif %}
+    <script>
+        function checksubmit() {
+            if ($('#title').val() == "" || $('#content').val() == "") {
+                $('#label_error').html('问题标题和内容不能为空');
+                return false;
+            } else {
+                return true;
+            }
+        }
+    </script>
 {% endblock %}
