--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,12 @@
 {% block title %}首页{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static',filename='css/index.css') }}">
+    {% for message in get_flashed_messages() %}
+    <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        {{ message }}
+    </div>
+    {% endfor %}
 {% endblock %}
 {% block main %}
     {% if questions|length == 0 %}
