--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     {% for question in questions %}
         <ui>
             <div class="avatar-group">
-                <img src="{{ url_for('static',filename='images/1110055.png') }}" alt="" class="avatar">
+                <img src="{{ url_for('static',filename='images/head.jpg') }}" alt="" class="avatar">
             </div>
             <div class="question-group">
                 <p class="question-title"><a
