--- a/templates/detail.html
+++ b/templates/detail.html
@@ -29,16 +29,16 @@
                 {% endif %}
             {% endif %}
         {% endif %}
-        <h4>评论：（{{ answer_count }}）</h4>
+        <h4>回答：（{{ answer_count }}）</h4>
         {% if user %}
             {% if user.UserMute != '1' %}
                 <form action="{{ url_for('answer.add_answer') }}" method="post" onsubmit="return checksubmit()">
                     <div class="form-group">
-                        <input type="text" name="answer_content" class="form-control" placeholder="请填写评论">
+                        <input type="text" name="answer_content" class="form-control" placeholder="请填写回答">
                         <input type="hidden" name="question_id" value="{{ question.id }}">
                     </div>
                     <div class="form-group" style="text-align: right">
-                        <button type="submit" class="btn btn-primary">评论</button>
+                        <button type="submit" class="btn btn-primary">发布</button>
                     </div>
                     <div class="form-group">
                         <label id="label_error"
