--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,16 +1,18 @@
 .logo{
     width: 20px;
 }
-body{
-    background:#f3f3f3;
-}
+
+
 .main{
-    background: #fff;
+    background:#e3e3e3;
     width: 730px;
     overflow: hidden;
     margin: 0 auto;
     padding: 10px;
 }
+
+
 .page-title{
     text-align: center;
 }
+
