--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}-问答平台</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css')}}" >
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
-    <link rel="shortcut icon" href="{{ url_for('static',filename='images/favicon.ico') }}" type="image/x-icon" />
+    <link rel="shortcut icon" href="{{ url_for('static',filename='images/hum.jpg') }}" type="image/x-icon" />
     <script src="{{ url_for('static',filename='js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static',filename='js/bootstrap.min.js')}}" crossorigin="anonymous"></script>
+    <style>
+		.xue{
+			background: url({{url_for('static',filename='images/basebg.jpg') }}) no-repeat center center fixed;
+            -webkit-background-size: cover;
+            -moz-background-size: cover;
+            -o-background-size: cover;
+            background-size: cover;
+            opacity: 0.9;
+
+		}
+	</style>
+
+
     {% block head %}{% endblock %}
+
+
 </head>
-<body>
+<body class="xue">
 <nav class="navbar navbar-default">
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -22,9 +38,14 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="#">
-          <img class="logo" src="{{ url_for('static',filename='images/1110055.png') }}" alt="">
+          <img class="logo" src="{{ url_for('static',filename='images/head.jpg') }}" alt="">
       </a>
     </div>
+
+
+
+
+
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -34,7 +55,7 @@
       </ul>
       <form class="navbar-form navbar-left" action="{{ url_for('question.search') }}" method="post">
         <div class="form-group">
-          <input type="text" name="search_key" class="form-control" placeholder="请输入关键字">
+          <input type="text" name="search_key" class="form-control" placeholder="请输入关键字" value="{{ search_key }}">
         </div>
         <button type="submit" class="btn btn-default">查找</button>
       </form>
@@ -42,17 +63,25 @@
           {% if user%}
               <li><a href="#">{{ user[0].UserName }}</a></li>
               <li><a href="{{ url_for('login.logout') }}">注销</a></li>
+
           {% else %}
               <li><a href="{{ url_for('login.login') }}">登录</a></li>
               <li><a href="{{ url_for('login.regist') }}">注册</a></li>
+
           {% endif %}
 
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+
+
 <div class="main">
     {% block main %}{% endblock %}
 </div>
+
+
+
 </body>
 </html>
