--- a/templates/index.html
+++ b/templates/index.html
@@ -1,15 +1,19 @@
 {% extends 'base.html' %}
 {% block title %}首页{% endblock %}
+
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static',filename='css/index.css') }}">
 {% endblock %}
 {% block main %}
     <ul class="question-list">
+
+
     {% for question in questions %}
          <li>
             <div class="avatar-group">
-                <img src="{{ url_for('static',filename='images/1110055.png') }}" alt="" class="avatar">
+                <img src="{{ url_for('static',filename='images/head.jpg') }}" alt="" class="avatar">
             </div>
+
             <div class="question-group">
                 <p class="question-title"><a href="{{ url_for('answer.detail', question_id=question.id) }}">{{ question.QuestionTitle }}</a></p>
                 <p class="question-content">{{ question.QuestionContent }}</p>
@@ -22,3 +26,4 @@
     {% endfor %}
     </ul>
 {% endblock %}
+
