个人信息部分跳转修复

--- a/templates/person_info.html
+++ b/templates/person_info.html
@@ -38,7 +38,7 @@
         </ul>
     </div>
 
-    <form class="form-group" action="{{ url_for('person.person_info_update') }}" method="post">
+    <form class="form-group" action="{{ url_for('person.person_info_update_test') }}" method="post">
         <button type="submit" class="btn btn-default">更新信息</button>
     </form>
 
