add shangfei part

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -65,7 +65,7 @@
         {% for answer in answers %}
             <li>
                 <div class="user-info">
-                    <img src="{{ url_for('static',filename='images/1110055.png') }}" alt="" class="avatar">
+                    <img src="{{ url_for('static',filename='images/head.jpg') }}" alt="" class="avatar">
                     <span class="username">{{ answer.UserName }}</span>
                     <span class="create-time">{{ answer.AnswerTime }}</span>
                 </div>
