--- a/templates/user_right_manage.html
+++ b/templates/user_right_manage.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block main %}
 
- <h3 class="page-title">用户的个人中心（管理员视图）</h3>
+ <h3 class="page-title">管理员操作页面</h3>
     <h3 class="question-content">用户禁言状态：{{ user_muted.UserMute }}</h3>
     <form action="" method="post">
         <input type="hidden" name="user_id" value="{{ user_muted.id }}">
