--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,12 @@
     <title>{% block title %}{% endblock %}-问答平台</title>
     <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css')}}" >
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
-    <link rel="shortcut icon" href="{{ url_for('static',filename='images/hum.jpg') }}" type="image/x-icon" />
+    <link rel="shortcut icon" href="{{ url_for('static',filename='images/head.jpg') }}" type="image/x-icon" />
     <script src="{{ url_for('static',filename='js/jquery.min.js') }}"></script>
     <script src="{{ url_for('static',filename='js/bootstrap.min.js')}}" crossorigin="anonymous"></script>
     <style>
 		.xue{
-			background: url({{url_for('static',filename='images/basebg.jpg') }}) no-repeat center center fixed;
+			background: url({{url_for('static',filename='images/bg1.jpg') }}) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
@@ -29,29 +29,15 @@
 <body class="xue">
 <nav class="navbar navbar-default">
   <div class="container">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">
-          <img class="logo" src="{{ url_for('static',filename='images/head.jpg') }}" alt="">
-      </a>
-    </div>
-
-
-
-
 
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/">首页<span class="sr-only">(current)</span></a></li>
-        <li><a href="{{ url_for('question.question') }}">发布问答</a></li>
+        <li><a href="#">Goocat</a></li>
+        <li><a href="/">首页</a></li>
+        <li><a href="{{ url_for('question.question') }}">发布问题</a></li>
+          <li><a href="{{ url_for('person.person_info') }}">个人中心</a></li>
       </ul>
       <form class="navbar-form navbar-left" action="{{ url_for('question.search') }}" method="post">
         <div class="form-group">
@@ -61,7 +47,7 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
           {% if user%}
-              <li><a href="#">{{ user[0].UserName }}</a></li>
+              <li><a href="#">{{ user.UserName }}</a></li>
               <li><a href="{{ url_for('login.logout') }}">注销</a></li>
 
           {% else %}
