--- a/templates/question.html
+++ b/templates/question.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}发布问答{% endblock %}
+{% block title %}发布问题{% endblock %}
 {% block head %}
     <link rel="stylesheet" href="{{ url_for('static',filename='css/question.css') }}">
 {% endblock %}
 {% block main %}
     {% if user.UserMute != '1' %}
-        <h3 class="page-title">发布问答</h3>
+        <h3 class="page-title">发布问题</h3>
         <form action="" method="post" onsubmit="return checksubmit()">
             <div class="form-container">
                 <div class="form-group">
