--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,9 +14,9 @@ li
 li:link,li:visited
 {
     display:block;
-    width:120px;
+    width:100%;
     font-weight:bold;
-    color:#17a2b8;
+    color: rgba(23, 162, 184, 0.45);
     background-color:#ffffff;
     text-align:center;
     padding:4px;
@@ -26,7 +26,7 @@ li:link,li:visited
 
 li:hover,li:active
 {
-    background-color:#17a2b8;
+    background-color: rgba(125, 214, 255, 0.35);
 }
 .main{
     background: #fff;
