--- a/templates/base.html
+++ b/templates/base.html
@@ -3,54 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}-问答平台</title>
-    <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css')}}" >
+    <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
-    <link rel="shortcut icon" href="{{ url_for('static',filename='images/head.jpg') }}" type="image/x-icon" />
+    <link rel="shortcut icon" href="{{ url_for('static',filename='images/head.jpg') }}" type="image/x-icon"/>
     <script src="{{ url_for('static',filename='js/jquery.min.js') }}"></script>
-    <script src="{{ url_for('static',filename='js/bootstrap.min.js')}}" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static',filename='js/bootstrap.min.js') }}" crossorigin="anonymous"></script>
     <style>
-		.xue{
-			background: url({{url_for('static',filename='images/bg1.jpg') }}) no-repeat center center fixed;
+        .xue {
+            background: url({{url_for('static',filename='images/bg1.jpg') }}) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
             opacity: 0.9;
-		}
-	</style>
+        }
+    </style>
     {% block head %}{% endblock %}
 </head>
 <body class="xue">
 <nav class="navbar navbar-default">
-  <div class="container">
+    <div class="container">
 
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Goocat</a></li>
-        <li><a href="/">首页</a></li>
-        <li><a href="{{ url_for('question.question') }}">发布问题</a></li>
-          <li><a href="{{ url_for('person.person_info') }}">个人中心</a></li>
-      </ul>
-      <form class="navbar-form navbar-left" action="{{ url_for('question.search') }}" method="post">
-        <div class="form-group">
-          <input type="text" name="search_key" class="form-control" placeholder="请输入关键字" value="{{ search_key }}">
-        </div>
-        <button type="submit" class="btn btn-default">查找</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-          {% if user%}
-              <li><a href="#">{{ user.UserName }}</a></li>
-              <li><a href="{{ url_for('login.logout') }}">注销</a></li>
-          {% else %}
-              <li><a href="{{ url_for('login.login') }}">登录</a></li>
-              <li><a href="{{ url_for('login.regist') }}">注册</a></li>
-          {% endif %}
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="#">Goocat</a></li>
+                <li><a href="/">首页</a></li>
+                <li><a href="{{ url_for('question.question') }}">发布问题</a></li>
+                <li><a href="{{ url_for('person.person_info') }}">个人中心</a></li>
+            </ul>
+            <form class="navbar-form navbar-left" action="{{ url_for('question.search') }}" method="post">
+                <div class="form-group">
+                    <input type="text" name="search_key" class="form-control" placeholder="请输入关键字"
+                           value="{{ search_key }}">
+                </div>
+                <button type="submit" class="btn btn-default">查找</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                {% if user %}
+                    <li><a href="#">{{ user.UserName }}</a></li>
+                    <li><a href="{{ url_for('login.logout') }}">注销</a></li>
+                {% else %}
+                    <li><a href="{{ url_for('login.login') }}">登录</a></li>
+                    <li><a href="{{ url_for('login.regist') }}">注册</a></li>
+                {% endif %}
 
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
 <div class="main">
     {% block main %}{% endblock %}
