--- a/templates/person_answers.html
+++ b/templates/person_answers.html
@@ -6,15 +6,16 @@
 {% block main %}
 
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">
-          <img class="logo" src="{{ url_for('static',filename='images/head.jpg') }}" alt="">
-      </a>
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+            <img class="logo" src="{{ url_for('static',filename='images/head.jpg') }}" alt="">
+        </a>
     </div>
 
     <ul class="nav navbar-nav">
@@ -26,13 +27,14 @@
 
     <br>
     <br>
-    <br><center>全部回答</center>
+    <br>
+    <center>全部回答</center>
     <br>
     <ul class="answer-list">
         {% if answers|length == 0 %}
             <div class="answer-group">
                 <p class="attention-info">
-                        当前无回答
+                    当前无回答
                 </p>
             </div>
         {% endif %}
